hphp/test/quick/no_hh/nullsafe-call-no-hh.php.expectf
Fatal error: syntax error, unexpected T_OBJECT_OPERATOR in %s on line 10
